 Fix: Fixed a case where Player.CanPlace checked permissions against the wrong world's BuildSecurity controller (thanks Xesdra)
 Fix: Fixed "/Commands @Rank" showing hidden commands (thanks Hellenion)
 Fix: Fixed a typo in /worlds (thanks Kevinsweijen)
 Fix: Fixed BlockDBAutoEnable and BlockDBAutoEnableRank config keys being placed in the "General" section.
 Change: Improved config.xml format (now version 152). Configs created with fCraft 0.611+ will not be usable with older versions of fCraft.
 Change: Rewrote ServerGUI startup code to make it more responsive (thanks to 800craft for the idea).
 Change: Added information about command-line options to the README, and fixed some typos.
 Change: MaxConnectionsPerIP restriction no longer applies to localhost.

0.610
 Feature: Added /Fill2D (/f2d), /Triangle (/t), and /TriangleW (/tw) draw commands.
 Feature: Added ability to filter /Worlds by rank.
 Feature: Added /Static (a way to repeat selection commands).
 Feature: Added MaxUndoStates config key (how many steps back can /Undo go), and ConfigGUI bindings.
 Feature: Added experimental IP-range lookup to /Info (CIDR notation). Changed /Info pattern-matching single-character symbol from '.' to '?'
 Feature: Added pagination to /Players.
 Feature: /Spectate and /SpecPatrol now show what commands, PMs, and rank messages the target types in.
 Feature: Added a way to change server salt without needing a restart, using "/Reload Salt"
 Feature: /Measure now shows statistics about block types in the selection.
 Feature: /Gen now has two new templates: "ocean" and "empty"
 Fix: Many fixes in name-retyping functionality.
 Fix: Addressed stability issues in LineWrapper and Undo/Redo.
 Fix: Fixed /WLock not canceling all draw commands (as intended).
 Fix: Fixed some outdated descriptions, links, and tooltips in ConfigGUI.
 Fix: Fixed being able to BanIP/BanAll/UnbanIP/UnbanAll invalid IP addresses (0.0.0.0 and 255.255.255.255).