@@ -37,9 +37,9 @@ namespace fCraft.Drawing {
                 int ratio = 1;
                 Block block = cmd.NextBlockWithParam( player, ref ratio );
                 if( block == Block.Undefined ) return null;
-                if( ratio < 0 || ratio > 1000 ) {
-                    player.Message( "{0} brush: Invalid block ratio ({1}). Must be between 1 and 1000.",
-                                    Name, ratio );
+                if( ratio < 0 || ratio > RandomBrush.MaxRatio ) {
+                    player.Message( "{0} brush: Invalid block ratio ({1}). Must be between 1 and {2}.",
+                                    Name, ratio, RandomBrush.MaxRatio );
                     return null;
                 }
                 blocks.Add( block );
@@ -58,6 +58,8 @@ namespace fCraft.Drawing {
 
 
     public sealed class RandomBrush : IBrushInstance, IBrush {
+        public const int MaxRatio = 10000;
+
         public Block[] Blocks { get; private set; }
         public int[] BlockRatios { get; private set; }
         readonly Block[] actualBlocks;
@@ -68,11 +70,13 @@ namespace fCraft.Drawing {
             BlockRatios = new int[0];
         }
 
+
         public RandomBrush( Block oneBlock, int ratio ) {
             Blocks = new[] { oneBlock, Block.Undefined };
             BlockRatios = new[] { ratio, 1 };
             actualBlocks = new[] { oneBlock, Block.Undefined };
         }
+
 
         public RandomBrush( Block[] blocks, int[] ratios ) {
             Blocks = blocks;
@@ -139,8 +143,9 @@ namespace fCraft.Drawing {
             while( cmd.HasNext ) {
                 int ratio = 1;
                 Block block = cmd.NextBlockWithParam( player, ref ratio );
-                if( ratio < 0 || ratio > 1000 ) {
-                    player.Message( "Invalid block ratio ({0}). Must be between 1 and 1000.", ratio );
+                if( ratio < 0 || ratio > MaxRatio ) {
+                    player.Message( "Invalid block ratio ({0}). Must be between 1 and {1}.",
+                                    ratio, MaxRatio );
                     return null;
                 }
                 if( block == Block.Undefined ) return null;
