@@ -17,8 +17,8 @@ namespace fCraft {
 
         public static readonly ReleaseInfo CurrentRelease = new ReleaseInfo(
             611,
-            1279,
-            new DateTime( 2011, 11, 11, 21, 0, 0, DateTimeKind.Utc ),
+            1280,
+            new DateTime( 2011, 12, 4, 4, 0, 0, DateTimeKind.Utc ),
             "", "",
             ReleaseFlags.Bugfix | ReleaseFlags.ConfigFormatChange
 #if DEBUG
@@ -30,7 +30,7 @@ namespace fCraft {
             get { return "fCraft " + CurrentRelease.VersionString; }
         }
 
-        public const string LatestStable = "0.611_r1279";
+        public const string LatestStable = "0.611_r1280";
 
         public static string UpdateUrl { get; set; }
 
